<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.richardplus.acceleration.MainActivity"
    android:background="@color/primary"
    android:orientation="vertical">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChartX"
        style="@style/ChartStyle">
    </com.github.mikephil.charting.charts.LineChart>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChartY"
        style="@style/ChartStyle">
    </com.github.mikephil.charting.charts.LineChart>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChartZ"
        style="@style/ChartStyle">
    </com.github.mikephil.charting.charts.LineChart>

    <LinearLayout
        style="@style/LLayout"
        android:layout_weight="0.8">
        <TextView
            android:id="@+id/textviewX"
            style="@style/ShowAcc"
            android:layout_weight="1"
            android:text="@string/acc" />

        <TextView
            android:id="@+id/textviewY"
            style="@style/ShowAcc"
            android:layout_weight="1"
            android:text="@string/acc" />

        <TextView
            android:id="@+id/textviewZ"
            style="@style/ShowAcc"
            android:layout_weight="1"
            android:text="@string/acc" />

    </LinearLayout>

    <LinearLayout
        style="@style/LLayout">

        <TextView
            android:id="@+id/phoneStatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/phone_status"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/record_freq"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnUp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.4"
            android:background="@color/primary_light"
            android:text="△" />
        <TextView
            android:id="@+id/edit_freq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:layout_margin="5dp"
            android:background="@color/primary_dark"
            android:gravity="center"
            android:hint="@string/medium"
            android:textSize="15sp" />
        <Button
            android:id="@+id/btnDown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.4"
            android:background="@color/primary_light"
            android:text="▽" />
    </LinearLayout>

    <LinearLayout
        style="@style/LLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save_as"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/primary_dark"
            android:gravity="center"
            android:hint="@string/edit_message"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:layout_margin="10dp"
            android:background="@color/primary_light"
            android:text="@string/start_record" />
    </LinearLayout>

    <LinearLayout
        style="@style/LLayout"
        android:layout_weight="1.5">
        <Button
            android:id="@+id/btnToggle"
            style="@style/BottomButton"
            android:text="@string/pause" />

        <Button
            android:id="@+id/btnSave"
            style="@style/BottomButton"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnRead"
            style="@style/BottomButton"
            android:text="@string/read" />
    </LinearLayout>

</LinearLayout>


