<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context="xyz.richardplus.acceleration.Main2Activity">

    <TextView
        android:id="@+id/readBuffer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="11.8"
        android:padding="10dp"
        android:background="@android:color/white"
        android:scrollbars="vertical"
        android:maxLines = "1000"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textSize="15sp" />

    <LinearLayout
        style="@style/LLayout"
        android:layout_weight="1.5">
        <Button
            android:id="@+id/btnToggle"
            style="@style/BottomButton"
            android:text="@string/pause" />

        <Button
            android:id="@+id/btnSave"
            style="@style/BottomButton"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnRead"
            style="@style/BottomButton"
            android:text="@string/goback" />
    </LinearLayout>
</LinearLayout>
